--- a/css/borrar.css
+++ b/css/borrar.css
@@ -1,5 +1,9 @@
 /* Rubén Torres */
 
+section{
+    position: relative;
+}
+
 /***** FORM *****/
 form{
     position: absolute;
@@ -10,7 +14,7 @@ form{
     margin: auto;
     width: 300px;
     height: 150px;
-    background-color: rgb(68, 68, 68);
+    background-color: rgb(51, 51, 51);
     color: white;
     padding: 40px;
     display: flex;
