--- a/css/borrar.css
+++ b/css/borrar.css
@@ -14,11 +14,11 @@ form{
     margin: auto;
     width: 300px;
     height: 150px;
-    background-color: rgb(51, 51, 51);
-    color: white;
+    background-color: rgb(241, 241, 241);
     padding: 40px;
     display: flex;
     flex-direction: column;
+    border-radius: 20px;
 }
 
 form > legend{
@@ -36,7 +36,9 @@ form > legend{
     margin: 5px;
     padding: 10px;
     color: white;
-    background-color: rgb(29, 29, 29);
+    background-color: #2e3440;
+    border-radius: 5px;
+    border: none;
     cursor: pointer;
 }
 
