--- a/css/index.css
+++ b/css/index.css
@@ -37,6 +37,10 @@ table tr > td{
     padding: 0.9375em 0.735294118%; /* respecto al width del html */
 }
 
+table h1{
+    color: #2e3440;
+}
+
 /** ICONOS **/
 .iconos{
     /* width: 40px; */
