--- a/css/index.css
+++ b/css/index.css
@@ -79,92 +79,93 @@ section > a > h3{
 }
 
 /***** BUSCAR *****/
+/*
+    He estado calculando tamaños y posicionamientos
+    para el buscador, pero como tenía una imagen en px 
+    (ahora es fa-search con font-size (sigue teniendo px)),
+    y hay un div que tiene borde, siempre se me caía, o
+    era necesario hacer muchas medias-queries, y finalmente
+    optamos por hacerlo con cajas flexibles y también le he
+    añadido box-sizing:border-box.
+*/
 /*** FORM ***/
 form{
     /* width: 450px; */
     width: 50%; /* respecto al width del section (su caja contenedora) */
     /* margin: 20px auto; */
     margin: 1.25em auto;
+    background-color: #2e3440;
+    border-radius: 10px;
     display: flex;
-    position: relative;
+    box-sizing: border-box;
 }
 
 /*** SELECT ***/
-form > div:first-child{
-    /* width: 115px; */
-    width: 25.555555556%; /* respecto al width del form (su caja contenedora) */
-    background-color: #2e3440;
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-}
-
-form > div > select{
+form > select{
+    width: 20%;
+    /* padding: 10px; */
+    padding: 2.222222222%; /* respecto al width del form (su caja contenedora) */
+    /* margin: 0 10px; */
+    margin: 0 2.222222222%; /* respecto al width del form (su caja contenedora) */
     background-color: #2e3440;
     color: white;
-    height: 100%;
-    /* padding: 10px; */
-    padding: 8.695652174%; /* respecto al width del div (su caja contenedora) */
-    /* margin: 0 10px; */
-    margin: 0 8.695652174%; /* respecto al width del div (su caja contenedora) */
-    border-radius: 10px;
     border: none;
 }
 
 /*** BUSCADOR ***/
-form > div:last-child{
-    /* width: 322px; */
-    width: 71.555555556%; /* respecto al width del form (su caja contenedora) */
-    /* width: 71.222222223%; */ /* Al tener borde y pasarlo a % no le pueden quedar decimales, entoces se redondea el borde y lo que le hayamos sumado al borde para redondearlo, se le resta al width */
-    display: flex;
-    position: relative;
-    /* padding: 5px 10px; */
-    padding: 0.3125em 2.222222222%; /* respecto al width del form (su caja contenedora) */
-    /* margin-left: 100px; */
-    margin-left: 22.222222222%; /* respecto al width del form (su caja contenedora) */
-    background-color: white;
+form > div{
+    width: 80%;
     border: 3px solid #2e3440;
-    /* border: 1% solid #2e3440; */ /* respecto al width del form (su caja contenedora) */
     border-radius: 10px;
-    z-index: 1;
+    position: relative;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    background-color: white;
 }
 
 /** LUPA **/
-form > div > img{
-    /* width: 25px; */
-    width: 1.5625em;
+.fa-search{
+    /* font-size: 25px!important; */
+    font-size: 1.5625em!important;
+    /* margin-right: 27px; */
+    margin: 0.3125em 2.976190476%; /* respecto al width del div (su caja contenedora) */
+    /* color: white;
+    position: absolute;
+    right: 0;
+    bottom: 20%; */
 }
 
 /** INPUT **/
 form > div > input[type=text]{
+    width: 80%;
+    /* margin: 0 10px; */
+    margin: 0 2.976190476%; /* respecto al width del div (su caja contenedora) */
     outline: none;
     border: none;
-    /* margin: 0 10px; */
-    margin: 0 3.105590062%; /* respecto al width del div (su caja contenedora) */
 }
 
 /** BOTÓN BUSCAR **/
 form > div > input[type=submit]{
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;    
+    width: 20%;
+    height: 100%;
     border-radius: 7px;
-    /* margin: 0 10px; */
-    padding: 0 3.105590062%; /* respecto al width del div (su caja contenedora) */
     outline: none;
     border: none;
     cursor: pointer;
+    background-color: #d08770;
 }
 
-form > div > input[type=submit]:hover{
-    background-color: #adc0e9;
+form > div > input[type=submit]:hover,
+.fa-search:hover form > div > input[type=submit]{
+    background-color: #b37360;
 }
 
 @media screen and (max-width: 650px) {
     table{
-        /* width: 90%; */
+        width: 100%;
+    }
+    form{
+        width: 90%;
     }
 }
